# ResumeForge

./: .gitignore  README.md  main.py  requirements.txt  resume_agent.db
backend/: .env.example  pyproject.toml  resume_agent.db  test_sanitization.py
backend/app/: main.py
backend/app/api/: __init__.py  exceptions.py
backend/app/api/routes/: __init__.py  github.py  health.py  resume.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  utils.py
backend/app/models/: __init__.py  resume.py
backend/app/schemas/: __init__.py  api_schemas.py  resume_schema.py
backend/app/services/: __init__.py  github_service.py  llm_service.py  normalization_service.py
backend/app/services/parsers/: __init__.py  base.py  latex_parser.py  markdown_parser.py  pdf_parser.py
backend/prompts/: system_prompt.txt
data/: prompt.md
data/base_resume/: resume.tex
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/features/: DecisionLog.tsx  GitHubConnect.tsx  ResumeAnalytics.tsx  ResumePreview.tsx  ResumeUpload.tsx
frontend/src/hooks/: use-settings.ts
frontend/src/layouts/: RootLayout.tsx
frontend/src/pages/: HistoryPage.tsx  Home.tsx  ResultsPage.tsx  SettingsPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
scripts/: testing.ipynb  verify_backend.py
